--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.14",
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.3",
-    "framer-motion": "^12.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.278",
-    "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.3",
-    "three": "^0.173.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
