--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.278",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.3",
     "typewriter-effect": "^2.21.0",
     "use-count-up": "^3.0.1"
