--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/vite": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.15.1",
     "react-parallax-tilt": "^1.7.278",
+    "react-scroll": "^1.9.2",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.3",
