--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-parallax-tilt": "^1.7.278",
     "react-scroll": "^1.9.2",
     "react-slick": "^0.30.3",
+    "react-vertical-timeline-component": "^3.5.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.3",
     "typewriter-effect": "^2.21.0",
